[gd_scene load_steps=4 format=3 uid="uid://53r2l0aa47xe"]

[ext_resource type="Theme" uid="uid://diu3ahrw1puva" path="res://addons/HTNDomainManager/PluginSystem/PluginTheme.tres" id="1_1e8uj"]
[ext_resource type="Script" path="res://addons/HTNDomainManager/PluginSystem/NodeSpawnMenu/NodeSpawnMenuController.gd" id="2_x72ml"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvdyc"]
bg_color = Color(0.0980392, 0.113725, 0.137255, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="NodeSpawnMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_1e8uj")
script = ExtResource("2_x72ml")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(175, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -150.0
offset_right = 20.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pvdyc")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Nodes"
horizontal_alignment = 1

[node name="SearchBar" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
placeholder_text = "Search..."
clear_button_enabled = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="NodeButtons" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 230)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/SearchBar" to="." method="_on_search_bar_text_changed"]
